--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -2,9 +2,9 @@
 {% if paginator.total_pages > 1 %}
 <div class="pagination">
   {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
+    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Previous</a>
   {% else %}
-    <span>&laquo; Prev</span>
+    <span>&laquo; Previous</span>
   {% endif %}
 
   {% for page in (1..paginator.total_pages) %}
@@ -44,5 +44,8 @@
 
 .pagination {
   text-align: center;
+}
+.webjeda {
+  color: #0098FF;
 }
 </style>
