--- a/_includes/social_media.html
+++ b/_includes/social_media.html
@@ -52,7 +52,7 @@
 </style>
 
 <div class="share-box">
-<h5>Comparte esto:</h5>
+<h5>Compartir en:</h5>
 
 <a class="f" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{site.baseurl}}{{ page.url }}" onclick="window.open(this.href, 'mywin',
 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" ><i class="fa fa-facebook-official fa"></i><span> facebook</span></a>
