--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>{{ page.title}} | Runcoding</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.ico">    
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.ico">
     <link rel="stylesheet" href="/assets/css/aurora-pack.min.css">
     <link rel="stylesheet" href="/assets/css/aurora-theme-base.min.css">
     <link rel="stylesheet" href="/assets/css/urku.css">
@@ -25,7 +25,7 @@
         </svg>
       </label>
       <div class="ae-container-fluid rk-topbar">
-        <h1 class="rk-logo"><a href="/">Runcoding<sup>tm</sup></a></h1>
+        <h1 class="rk-logo" ><a href="/"> by Ismael López</a></h1>
         <nav class="rk-navigation">
           {% include navigation.html %}
           <form class="rk-search">
@@ -46,16 +46,14 @@
       <div class="ae-grid ae-grid--collapse">
         <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-left">
           <ul class="rk-menu rk-footer-menu">
-            <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Aviso Legal</a>
+            <li class="rk-menu__item"><a href="/about/" class="rk-menu__link">About</a>
             </li>
-            <li class="rk-menu__item"><a href="contact.html" class="rk-menu__link">Privacidad</a>
-            </li>
-            <li class="rk-menu__item"><a href="/contacto/" class="rk-menu__link">Contacto</a>
+            <li class="rk-menu__item"><a href="/contact/" class="rk-menu__link">Contact</a>
             </li>
           </ul>
-
         </div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center">
+          <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© 2017 </span><span class="ae-u-bolder">Runcoding </span> All rights reserved.</p>
           <a href="https://www.facebook.com/ismaeldevmw" target="_blank" class="rk-social-btn ">
             <svg>
               <use xlink:href="/assets/img/symbols.svg#icon-facebook"></use>
@@ -71,7 +69,6 @@
               <use xlink:href="/assets/img/symbols.svg#icon-pinterest"></use>
             </svg>
           </a>
-          <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© 2017 </span><span class="ae-u-bolder">Runcoding </span> All rights reserved.</p>
         </div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-right">
           <p class="rk-footer__text rk-footer__by">Powered by <a href="https://www.netlify.com/" class="ae-u-bolder">Netlify</a></p>
