--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         </svg>
       </label>
       <div class="ae-container-fluid rk-topbar">
-        <h1 class="rk-logo" ><a href="/"> by Ismael López</a></h1>
+        <h1 class="rk-logo" ><a href="/"> Runcoding</a></h1>
         <nav class="rk-navigation">
           {% include navigation.html %}
           <form class="rk-search">
