--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <section class="ae-container-fluid ae-container-fluid--full">
-  <header class="rk-portfolio-cover" style="background-image: url('{{ page.thumbnail }}');">
+  <header class="rk-portfolio-cover">
     <div class="item-inside__meta">
       <h1 class="ae-u-bolder rk-portfolio-title white">{{ page.title }}</h1>
       <p class="ae-theta rk-portfolio-category white">publicado el {{ page.date | date: "%d/%m/%Y" }}</p>
