--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="/assets/css/aurora-theme-base.min.css">
     <link rel="stylesheet" href="/assets/css/urku.css">
     <link rel="stylesheet" href="/assets/css/app.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106541038-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-106541038-2');
+    </script>
   </head>
   <body class="top-fixed">
     <header class="ae-container-fluid ae-container-fluid--full rk-header ">
