--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Great+Vibes');
 body, html {
-  background-color: #F7F7F7;
+  background-color: #ffffff;
 }
 #portafolio-item {
   cursor: pointer;
