--- a/_layouts/blogs_page.html
+++ b/_layouts/blogs_page.html
@@ -11,7 +11,7 @@ layout: default
 			</div>
 			<div class="blogs-news-info-container">				
 				<h2>{{ post.title }}</h2>
-				<p>{{ post.excerpt }}</p>
+				<p>{{ post.content | strip_html | truncatewords: 20 }}</p>
 				<a href="{{ post.url }}" class="blogs-button">Leer más</a>
 			</div>
 			{% endfor %}
