--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,14 @@
 <footer>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+	<div class="footer__social-media">
+		<a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+		<a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-dev"></i></a>		
+		<a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
+		<a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+		<a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
+	</div>
+	<div class="footer__copyright">
+		<div>
+			<p>&copy; <script>document.write(new Date().getFullYear());</script> Hecho en México por <strong> Ismael López </strong>Alojado en Netlify</p>
+		</div>
+	</div>
 </footer>
