--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,7 @@
 <header>
-	<section class="header-icons-container">
-		<div class="icons">
-			<a href="/"><span class="flaticon-001-facebook"></span></a>
-			<a href="/"><span class="flaticon-002-twitter"></span></a>
-			<a href="/"><span class="flaticon-011-instagram"></span></a>
-			<a href="/"><span class="flaticon-010-linkedin"></span></a>
-			<a href="/"><span class="flaticon-008-youtube"></span></a>
-		</div>
-	</section>
 	<nav>
 		<section class="nav-logo-container">
-			<a href="/"><img src="/assets/img/Logo-negro.png" alt="Logo de mi blog"></a>
+			<a href="/">Ismael Devloop</a>
 		</section>
 		<section class="profile-link">
 			{% for item in site.data.navigation %}
