:recycle: Separated files css
+ Created variables css + Created reset etc

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,6 +1,8 @@
 ---
 ---
-@import "main";
 @import "dracula";
+@import "reset";
+@import "functions";
+@import "variables";
 @import "media-queries";
-@import "_flaticon";
+@import "main";
