--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,34 +1,49 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto+Slab:400,700|Roboto:400,500,700,900&display=swap');
+// ---------------------------------------------
+// MAIN: STYLES
 
-$primary-color: #453DB4;
-$primary-color-light: #4D43CF;
-$primary-color-dark: #38337B;
-$accent-color: #FAC400;
+
+// ---------------------------------------------
+// BOX SIZING
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+
+// ---------------------------------------------
+// HTML, BODY: STYLES
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
 
 body {
-    font-family: 'Roboto Mono', monospace;
-    margin: 0;
-    padding: 0;
-    background: #FAFAFA;
+  color: $color-font;
+  background-color: $gray-light;
+  font-size: $font-size;
+  font-weight: $font-regular;
+  font-family: $font-family-1;
+  line-height: $line-height;
 }
 
-a {
-    text-decoration: none;
-    display: inline;
-    color: black;
+h1 {
+    font-size: $h1;
 }
-
-.home-body {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+h2 {
+    font-size: $h2;
 }
-
-.grid-container {
-    max-width: 980px;
-    margin: auto;
+h3 {
+    font-size: $h3;
+}
+h4 {
+    font-size: $h4;
+}
+h5 {
+    font-size: $h5;
+}
+h6 {
+    font-size: $h6;
 }
 
 header {
@@ -53,7 +68,7 @@ nav .nav-logo-container {
 }
 
 nav .nav-logo-container a {
-    color: white;
+    color: $white;
     text-decoration: none;
     margin: 0 25px;
 }
@@ -66,52 +81,33 @@ nav .profile-link {
 }
 
 nav .profile-link a {
-    color: white;
+    color: $white;
     border-bottom: 1px solid black;
     margin: 0 10px;
 }
 
-.home-main {
+.grid-container {
+    max-width: 980px;
+    margin: auto;
+}
+
+.grid {
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
-    height: 100%;
-    background-image: url('../assets/img/Cover.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 18px;
 }
-
-.home-main section {
-    display: grid;
-    grid-column: 2;
-    justify-items: center;
-    height: 350px;
-    margin-top: 80px;
-}
-
-.home-main-text {
-    font-family: 'Roboto mono', monospace;
-    font-size: 30px;
-    font-weight: 700px;
-    letter-spacing: 10px;
-    text-align: center;
-    color: white;
-}
-
-.home-main-button {
-    width: 110px;
-    height: 50px;
-    background: #48cfad;
-    text-align: center;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 50px;
+.pagination {
+    margin-top: 45px;
 }
 
 .blogs-main {
     border-top: 1px solid $primary-color;
     min-height: calc((100vh - 80px) - 110px);
 	display: grid;
+    h3 {
+        font-size: $h3;
+    }
 }
 
 .blogs-news-container {
@@ -139,7 +135,7 @@ nav .profile-link a {
     border-radius: 0.4rem 0.4rem 0px 0px;
     padding: 1rem 1rem 0px;
     margin: 2rem auto 0px 3rem;
-    background: linear-gradient(57deg, rgb(78, 68, 214) 0%, rgb(55, 50, 119) 100%);
+    background: linear-gradient(57deg, $primary-color-light 0%, $primary-color-dark 100%);
     color: white;
     text-align: center;
 }
@@ -149,13 +145,13 @@ nav .profile-link a {
     background-color: #F4F4F4;
 }
 
-.blogs-posts-container h3 {
+.blogs-posts-container h3 {    
     border-bottom: 1px solid #cdd2da;
     padding-bottom: 20px;
 }
 
 .blogs-button {
-    border: 1px solid #47cfac;
+    border: 1px solid $accent-color;
     padding: 10px 15px;
     font-size: 12px;
 }
@@ -180,21 +176,10 @@ nav .profile-link a {
     margin-top: 25px;
 }
 
-.pagination {
-    margin-top: 45px;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 18px;
-}
-
 .grid > article.post-element {
     padding: 1rem;
     background: white;
-    box-shadow: 0 0 0.7142857142857143rem #cccccc;
+    box-shadow: 0 0 0.7142857142857143rem $gray-shadow;
     border-radius: 0.21428571428571427rem;
 }
 
@@ -202,34 +187,6 @@ nav .profile-link a {
     width: 100%;
     height: 150px;
     object-fit: cover;
-}
-footer {
-    display: grid;
-    grid-template-columns: 1fr;
-}
-
-footer .footer__social-media {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    height: 40px;
-    background-color: $primary-color;
-    a {
-        margin: 10px 25px;
-        color: white;
-    }
-}
-
-footer .footer__copyright {    
-    background-color: #242526;
-    padding: 25px 0;
-    p {
-        margin: 0;
-        color: white;
-        font-size: 15px;
-        text-align: center;
-    }
 }
 
 .blogpost-head-container {
@@ -241,7 +198,7 @@ footer .footer__copyright {
 }
 
 .blogpost-main-container h1 {
-    border-bottom: 1px solid #cdd2da;
+    border-bottom: 1px solid $gray-shadow;
     padding-bottom: 20px;
 }
 
@@ -266,8 +223,8 @@ footer .footer__copyright {
 }
 
 .blogcard {
-    background: white;
-    box-shadow: 0 0 0.7142857142857143rem #cccccc;
+    background: $white;
+    box-shadow: 0 0 0.7142857142857143rem $gray-shadow;
     padding: 1.1428571428571428rem 2.2857142857142856rem 0.5714285714285714rem 2.2857142857142856rem;
     margin: 1.7142857142857142rem 0;
     border-radius: 0.21428571428571427rem;
@@ -285,7 +242,7 @@ footer .footer__copyright {
 .contact-main-container {
     width: 100%;
     min-height: 250px;
-    background-color: #e6e9ed;
+    background-color: $gray-shadow;
     text-align: center;
     padding-bottom: 50px;
 }
@@ -297,7 +254,7 @@ footer .footer__copyright {
 }
 
 .contact-main-container div a{
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid $black;
     padding-bottom: 5px;
 }
 
@@ -312,7 +269,7 @@ footer .footer__copyright {
 
 .profile-main-container {
     padding: 70px 40px;
-    background-color: #e6e9ed;
+    background-color: $gray-shadow;
     margin-bottom: 50px;
 }
 
@@ -330,7 +287,7 @@ footer .footer__copyright {
 }
 
 .profile-main-projects h3 {
-    border-bottom: 1px solid #cdd2da;
+    border-bottom: 1px solid $gray-shadow;
     padding-bottom: 35px;
     text-align: center;
 }
@@ -348,6 +305,35 @@ footer .footer__copyright {
     width: 100%;
 }
 
+footer {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+footer .footer__social-media {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    height: 40px;
+    background-color: $primary-color;
+    a {
+        margin: 10px 25px;
+        color: $white;
+    }
+}
+
+footer .footer__copyright {    
+    background-color: $black;
+    padding: 25px 0;
+    p {
+        margin: 0;
+        color: $white;
+        font-size: 15px;
+        text-align: center;
+    }
+}
+
 /* Tamaño del scroll */
 ::-webkit-scrollbar {
     width: 8px;
@@ -356,7 +342,7 @@ footer .footer__copyright {
   
 /* Estilos barra (thumb) de scroll */
 ::-webkit-scrollbar-thumb {
-    background: #ccc;
+    background: #cccccc;
     border-radius: 4px;
 }
 
@@ -383,7 +369,7 @@ footer .footer__copyright {
 .polygon {
     width: 640px;
     height: 360px;
-    background: white;
+    background: $white;
     clip-path: polygon(0 0, 100% 0%, 100% 99%, 0% 100%);
     z-index: 100;
     transform: rotate(15deg); /* Equal to rotateZ(45deg) */
@@ -402,7 +388,7 @@ footer .footer__copyright {
     border-radius: 0.4rem 0.4rem 0px 0px;
     padding: 1rem 1rem 0px;
     margin: 2rem auto 0px;
-    background: linear-gradient(to right, rgb(55, 50, 119), rgb(78, 68, 214));
+    background: linear-gradient(to right, $primary-color-dark, $primary-color-light);
 }
 
 .eYyPGs::before, .eYyPGs::after {
@@ -414,7 +400,7 @@ footer .footer__copyright {
     z-index: -1;
     left: -2rem;
     top: 0rem;
-    background: linear-gradient(to right, rgb(78, 68, 214), rgb(55, 50, 119));
+    background: linear-gradient(to right, $primary-color-light, $primary-color-dark);
 }
 
 .eYyPGs::before {
@@ -424,7 +410,7 @@ footer .footer__copyright {
     right: 0px;
     bottom: 0px;
     left: 0px;
-    box-shadow: rgba(22, 22, 22, 0.4) 0px 16px 48px;
+    box-shadow: $black 0px 16px 48px;
 }
 
 .eYyPGs::after {
